# broodlink

./: .env.example  .gitignore  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  benchmarks.md  broodctl  config.toml  deny.toml  docker-compose.yml  install.ps1  install.sh  podman-compose.prod.yaml  podman-compose.yaml
.beads/formulas/: build-feature.formula.toml  coding-agent.formula.toml  daily-review.formula.toml  knowledge-gap.formula.toml  research.formula.toml
.beads/formulas/custom/: architectural-review.formula.toml  ci-fix.formula.toml  code-review.formula.toml  codebase-exploration.formula.toml  debug-incident.formula.toml  decision-analysis.formula.toml  document-summary.formula.toml  formula-design.formula.toml  health-audit.formula.toml  incident-postmortem.formula.toml  knowledge-extract.formula.toml  onboard-agent.formula.toml  schema-migration.formula.toml  security-scan.formula.toml  task-breakdown.formula.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  formula_submission.yml
.github/workflows/: ci.yml  release.yml
agents/: broodlink-agent.py  pyproject.toml  requirements.txt
agents/broodlink_agent/: __init__.py  __main__.py  _transport.py  agent.py  bridge.py  cli.py  client.py  config.py  deferred_init.py  events.py  interactive.py  listener.py  llm.py  memory.py  nats_helper.py  prompt.py  tools.py  transcript.py
agents/broodlink_agent/ml/: __init__.py  batch.py  dataframes.py  graph.py
agents/broodlink_agent/models/: __init__.py  core.py
agents/broodlink_agent/namespaces/: __init__.py  agents.py  base.py  beads.py  decisions.py  knowledge_graph.py  memory.py  messaging.py  notifications.py  projects.py  scheduling.py  tasks.py  work.py
agents/tests/: conftest.py  test_agent.py  test_backward_compat.py  test_cli.py  test_client.py  test_e2e.py  test_models.py  test_namespaces.py  test_regression.py
crates/broodlink-config/: Cargo.toml
crates/broodlink-config/src/: lib.rs
crates/broodlink-events/: Cargo.toml
crates/broodlink-events/src/: lib.rs
crates/broodlink-formulas/: Cargo.toml
crates/broodlink-formulas/src/: lib.rs
crates/broodlink-fs/: Cargo.toml
crates/broodlink-fs/src/: attachments.rs  lib.rs
crates/broodlink-runtime/: Cargo.toml
crates/broodlink-runtime/src/: lib.rs
crates/broodlink-secrets/: Cargo.toml
crates/broodlink-secrets/src/: lib.rs
crates/broodlink-telemetry/: Cargo.toml
crates/broodlink-telemetry/src/: lib.rs
docs/: broodlink-v0_11_0-docs.md  broodlink-v0_12_0-docs.md  broodlink-v0_12_2-docs.md  broodlink-v0_12_3-docs.md  broodlink-v0_12_5-docs.md  broodlink-v0_7_0-docs.md  broodlink-v0_8_0-docs.md
examples/: README.md
examples/research-report/: researcher.py  run.sh  writer.py
launchagents/: com.broodlink.a2a-gateway.plist  com.broodlink.beads-bridge.plist  com.broodlink.broodlink.plist  com.broodlink.coordinator.plist  com.broodlink.embedding-worker.plist  com.broodlink.heartbeat.plist  com.broodlink.hugo-status.plist  com.broodlink.mcp-server.plist  com.broodlink.status-api.plist
migrations/: 001_dolt_brain.sql  002_postgres_hotpaths.sql  003_postgres_functions.sql  004_approval_gates.sql  005_agent_metrics.sql  005b_agent_max_concurrent.sql  006_negotiations.sql  007_streams.sql  008_guardrails.sql  008b_agent_budget_tokens.sql  009_a2a_gateway.sql  010_task_result.sql  011_workflow_orchestration.sql  012_memory_fulltext.sql  013_knowledge_graph.sql  014_budget_enforcement.sql  015_dead_letter_queue.sql  016_workflow_branching.sql  017_multi_agent_collab.sql  018_webhooks.sql  019_chat_sessions.sql  020_formula_registry.sql  021_dashboard_auth.sql  022_schema_hardening.sql  023_platform_credentials.sql  024_platform_credentials_meta.sql  025_missing_indexes.sql  026_formula_sync.sql  027_service_events.sql  028_proactive_skills.sql  029_negotiation_protocol.sql  030_chat_attachments.sql  031_runtime_settings.sql
rust/a2a-gateway/: Cargo.toml  Containerfile
rust/a2a-gateway/src/: main.rs
rust/beads-bridge/: Cargo.toml  Containerfile
rust/beads-bridge/src/: main.rs
rust/broodlink/: Cargo.toml
rust/broodlink/src/: bootstrap.rs  dashboard.rs  main.rs  models.rs  process_manager.rs
rust/broodlink/src/setup/: api.rs  mod.rs
rust/coordinator/: Cargo.toml  Containerfile
rust/coordinator/src/: main.rs
rust/embedding-worker/: Cargo.toml  Containerfile
rust/embedding-worker/src/: main.rs
rust/heartbeat/: Cargo.toml  Containerfile
rust/heartbeat/src/: main.rs
rust/mcp-server/: Cargo.toml  Containerfile
rust/mcp-server/src/: handler.rs  main.rs  protocol.rs  streamable_http.rs
rust/status-api/: Cargo.toml  Containerfile
rust/status-api/src/: main.rs
scripts/: ai-backup.sh  backfill-knowledge-graph.sh  backfill-search-index.sh  bootstrap.sh  build.sh  create-admin.sh  db-setup.sh  dev.sh  generate-tls.sh  infra-start.sh  launchagents.sh  offline-code.sh  onboard-agent.sh  rotate-jwt-keys.sh  secrets-init.sh  seed-formulas.sh  start-gateway.sh  start-services.sh
status-site/: hugo.toml
status-site/content/a2a/: _index.md
status-site/content/agents/: _index.md
status-site/content/approvals/: _index.md
status-site/content/audit/: _index.md
status-site/content/beads/: _index.md
status-site/content/chat/: _index.md
status-site/content/commits/: _index.md
status-site/content/control/: _index.md
status-site/content/decisions/: _index.md
status-site/content/delegations/: _index.md
status-site/content/guardrails/: _index.md
status-site/tests/: api-smoke.sh  control-panel.sh  dom-crosscheck.sh  frontend-smoke.sh  js-regression.sh
templates/: agent-system-prompt.md
tests/: a2a-protocol.sh  agent-regression.sh  bridge-auth-rejection.sh  bridge-error-cases.sh  bridge-tool-roundtrips.sh  chat-integration.sh  coordinator-routing.sh  dashboard-auth.sh  deployment.sh  e2e.sh  formula-registry.sh  knowledge-graph.sh  launchagent-portability.sh  mcp-protocol.sh  run-all.sh  security-audit.sh  stream-delivery.sh  v060-regression.sh
(+61 files in other folders)
