[workspace]
resolver = "2"
members = [
  "crates/broodlink-secrets",
  "crates/broodlink-config",
  "crates/broodlink-telemetry",
  "crates/broodlink-runtime",
  "rust/beads-bridge",
  "rust/coordinator",
  "rust/heartbeat",
  "rust/embedding-worker",
  "rust/status-api",
  "rust/mcp-server",
  "rust/a2a-gateway",
]

[workspace.package]
version     = "0.7.0"
edition     = "2021"
authors     = ["Neven Kordic <neven@broodlink.ai>"]
license     = "AGPL-3.0-or-later"
repository  = "https://github.com/nevenkordic/broodlink"

[workspace.dependencies]
tokio            = { version = "1", features = ["full"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
thiserror        = "1"
anyhow           = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
config           = "0.14"
uuid             = { version = "1", features = ["v4"] }
sqlx             = { version = "0.8", features = ["mysql", "postgres", "runtime-tokio-rustls", "chrono", "json", "uuid"], default-features = false }
async-nats       = "0.35"
reqwest          = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
axum             = { version = "0.7", features = ["json"] }
tower            = "0.4"
tower-http       = { version = "0.5", features = ["cors", "trace"] }
chrono           = { version = "0.4", features = ["serde"] }
rustls           = "0.22"
tokio-rustls     = "0.25"
jsonwebtoken     = "9"
async-trait      = "0.1"
tempfile          = "3"
# v0.2.0: OpenTelemetry + TLS
opentelemetry       = { version = "0.27", features = ["trace"] }
opentelemetry_sdk   = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp  = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"
axum-server         = { version = "0.7", features = ["tls-rustls"] }
futures             = "0.3"
tokio-stream        = "0.1"
toml                = "0.8"
hmac                = "0.12"
sha2                = "0.10"

[workspace.lints.clippy]
# Correctness — always deny
correctness = { level = "deny", priority = -1 }
# Style/complexity/pedantic — warn only (not errors)
too_many_lines = "allow"
type_complexity = "allow"
redundant_closure_for_method_calls = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
unreadable_literal = "allow"
expect_used = "allow"
unwrap_used = "allow"
useless_conversion = "allow"
map_unwrap_or = "allow"
struct_excessive_bools = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
items_after_statements = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
single_match_else = "allow"
manual_let_else = "allow"
needless_pass_by_value = "allow"
case_sensitive_file_extension_comparisons = "allow"
