[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "broodlink"
version = "0.12.0"
description = "Python SDK for Broodlink multi-agent AI orchestration"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Neven Kordic", email = "neven@broodlink.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.9",
    "nats-py>=2.7",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
ml = ["pandas>=2.0", "numpy>=1.24", "networkx>=3.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
    "aioresponses>=0.7",
    "mypy>=1.5",
    "ruff>=0.1",
]

[project.scripts]
broodlink = "broodlink_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["broodlink_agent"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
