[package]
name = "broodlink-events"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Formalized streaming event protocol for Broodlink services"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
