[package]
name = "broodlink-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pdf-extract = "0.7"
zip = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
