[package]
name = "broodlink-telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
broodlink-config = { path = "../broodlink-config" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
thiserror = { workspace = true }
http = "1"

[dev-dependencies]
toml = "0.8"
