[package]
name = "a2a-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
broodlink-config = { path = "../../crates/broodlink-config" }
broodlink-secrets = { path = "../../crates/broodlink-secrets" }
broodlink-telemetry = { path = "../../crates/broodlink-telemetry" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
axum-server = { workspace = true }
