[package]
name = "status-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
broodlink-secrets = { path = "../../crates/broodlink-secrets" }
broodlink-config = { path = "../../crates/broodlink-config" }
broodlink-telemetry = { path = "../../crates/broodlink-telemetry" }
broodlink-runtime = { path = "../../crates/broodlink-runtime" }
broodlink-formulas = { path = "../../crates/broodlink-formulas" }
broodlink-fs = { path = "../../crates/broodlink-fs" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
async-nats = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
tokio-stream = "0.1"
axum-server = { workspace = true }
bcrypt = "0.15"
rand = "0.8"
url = "2"
jsonwebtoken = { workspace = true }

[lints]
workspace = true
